# ABC526_biodiv_airflow

./: README.md  pyproject.toml  setup.py
biodiv_airflow/: config.py  dataflow_specs.py  helpers.py  sql_queries.py
dags/: biodiv_ingestion.py  biodiv_pipelines2_dag.py  biodiv_pipelines_dag.py
deployment/: README.md
deployment/create-service/: main.py
deployment/delete-service/: main.py
deployment/load-service/: main.py
deployment/trigger-service/: main.py
docs/: architecture.md  quickstart.md
terraform/: .terraform.lock.hcl  cloudbuild.apply.yaml  cloudbuild.destroy.yaml  iam.tf  main.tf  outputs.tf  provider.tf  versions.tf
terraform/bootstrap/: iam.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/ephemeral/: main.tf  outputs.tf  variables.tf
workflows/: biodiv_ephemeral_lifecycle.yaml
